--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <meta content="shijieSun" name="author">
+  <meta content="Hongkai Wei, Yang Yang, ShijieSun" name="author">
   <title>LMTTM-VMI: Linked Memory Token Turing Machine for 3D Volumetric Medical Image Classification</title>
 
   <!-- CSS includes -->
@@ -21,9 +21,8 @@
   <a href="#header">Home</a>
   <a href="#abstract">Abstract</a>
   <a href="#video">Video</a>
-  <a href="#dataset">Code&Dataset</a>
-  <a href="#paper">Paper</a>
-  <a href="#acknowledgement">Acknowledgements</a>
+  <a href="#MedMNIST3D">MedMNIST3D</a>
+  <a href="#Experiment">Experiment</a>
   <a class="icon" href="javascript:void(0);" onclick="toggleTopNav()">&#9776;</a>
 </div>
 
@@ -54,19 +53,13 @@ The code is released at:<a href="https://github.com/WHKai666666/LMTTM-VMI">LMTTM
 </div>
 
 <div class="container" id="video">
-  <h2>Video Overview</h2>
+  <h2>Video</h2>
   <p style="text-align:center;">
     
-    <iframe width="375" height="200" src="https://www.youtube.com/embed/9isr0WQB_IA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <iframe width="375" height="200" src="https://www.youtube.com/embed/pSJg135sZrY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <iframe width="375" height="200" src="https://www.youtube.com/embed/Ya3HwEYTwrE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <!--<iframe width="375" height="200" src="https://www.youtube.com/embed/9isr0WQB_IA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <video controls="controls" height="200" width="375">
-      <source src="https://www.dropbox.com/sh/nom2u2s7snivwhu/AABCywWoePDi0MnNXM9tXzyfa?dl=0&preview=omni_result.avi" type="video/mp4"></source>
-    </video>
-    <video controls="controls" height="200" width="375">
-      <source src="https://www.dropbox.com/sh/nom2u2s7snivwhu/AABCywWoePDi0MnNXM9tXzyfa?dl=0&preview=UA-DETREAC-MVI_39271.avi" type="video/mp4"></source>
-    </video>-->
+    <iframe width="375" height="200" src="https://www.youtube.com/embed/SlxYR8SKD9Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="375" height="200" src="https://www.youtube.com/embed/nbLcNbtDUNQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="375" height="200" src="https://www.youtube.com/embed/2zseAajmxPo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    
   </p>
 </div>
 
@@ -79,7 +72,7 @@ The code is released at:<a href="https://github.com/WHKai666666/LMTTM-VMI">LMTTM
 
             <table class="table table-hover" style="text-align: center">
                 <caption style="text-align: center">
-                    An Overview of MedMNIST3D in MedMNIST v2.
+                    An Overview of MedMNIST3D in <a href="https://medmnist.com/">MedMNIST v2</a>.
                 </caption>
                 <thead class="thead-light">
                     <tr>
@@ -325,40 +318,6 @@ The code is released at:<a href="https://github.com/WHKai666666/LMTTM-VMI">LMTTM
         </tbody>
     </table>
 </div>
-</div>
-
-<div class="container" id="dataset">
-  <h2>Code & Dataset</h2>
-  <!--    <p style="text-align:center;"> <img src="./ICCV2019/sports-360.png" width="100%"></p>-->
-  <!-- <p>Following resources are provided:</p> --> 
-  <div class="row" style="alignment: center">
-    <div class="col-sm-3"></div>
-    <div class="col-sm-3">
-      <a href="https://github.com/shijieS/DMMN" target="_blank">
-        <p style="text-align:center;">
-          <img src="./ECCV2024/dmmn_icons.png", height="128"><br>
-          DMM-Net (GitHub)</p>
-      </a>
-    </div>
-
-    <div class="col-sm-3">
-      <a href="https://github.com/shijieS/OmniMOTDataset"
-         target="_blank">
-        <p style="text-align:center;">
-          <img src="./ECCV2024/omotd_icons.png", height="128"><br>
-          OMOT dataset (GitHub)</p>
-      </a>
-    </div>
-    <div class="col-sm-3">
-      <a href="https://github.com/shijieS/OMOTDRecorder"
-         target="_blank">
-        <p style="text-align:center;">
-          <img src="./ECCV2024/omotd_script_icons.png", height="128"><br>
-          OMOT Recording Script (GitHub)</p>
-      </a>
-    </div>
-    <!-- <div class="col-sm-3"></div> -->
-  </div>
 </div>
 
 <!-- Javascript includes -->
